# haskell-mega-repo

./: .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  Makefile  README.md  build-in-linux-cabal.sh  cabal.project  data.sha256sums  hie.yaml  mega-repo-tool.config  stack-ghc-8.0.yaml  stack-lts-6.yaml  stack.yaml  tajna.yaml
arcola/: arcola.cabal
avatar-app/: avatar-app.cabal  package.yaml  schema.psql
avatar-app/lambdas/: ProcessLambda.hs
avatar-app/src-internal/Futurice/App/Avatar/: Types.hs
avatar-app/src-process/Futurice/Lambda/Avatar/: Process.hs
avatar-app/src/Futurice/App/: Avatar.hs
avatar-app/src/Futurice/App/Avatar/: API.hs  Config.hs  Ctx.hs  Embedded.hs  IndexPage.hs  Logic.hs  Markup.hs
avatar-client/: avatar-client.cabal
avatar-client/src/Futurice/App/Avatar/: API.hs
avatar-client/src/Servant/: Cached.hs
badge-app/: .gitignore  LICENSE  badge-app.cabal  data.sample.tar  data.tar
badge-app/src/Futurice/App/Badge/: API.hs  Config.hs  Ctx.hs  Data.hs  IndexPage.hs  Main.hs  Markup.hs  Templates.hs  Tools.hs
badge-app/srv/: Main.hs
checklist-app/: checklist-app.cabal  checklist-due-date.template  checklist.js  package.yaml
checklist-app/import/: Import.hs
checklist-app/src/Futurice/App/: Checklist.hs
checklist-app/src/Futurice/App/Checklist/: API.hs  Clay.hs  Command.hs  Config.hs  Ctx.hs  Logic.hs  Markup.hs  Notifications.hs  Personio.hs  Types.hs
checklist-app/src/Futurice/App/Checklist/Charts/: Done.hs
checklist-app/src/Futurice/App/Checklist/Pages/: AgentAudit.hs  Agents.hs  Archive.hs  Checklist.hs  Checklists.hs  CreateChecklist.hs  CreateEmployee.hs  CreateTask.hs  Employee.hs  EmployeeAudit.hs  HelpAppliance.hs  HelpServices.hs  Index.hs  More.hs  Personio.hs  Report.hs  Stats.hs  Task.hs  Tasks.hs
checklist-app/src/Futurice/App/Checklist/Types/: Basic.hs  ChecklistId.hs  ContractType.hs  ContractType.lhs  Identifier.hs  SortCriteria.hs  TaskAppliance.hs  TaskComment.hs  TaskItem.hs  TaskRole.hs  TaskRole.lhs  TaskTag.hs  World.hs
contacts-api/: contacts-api.cabal  package.yaml
contacts-api/src/Futurice/App/: Contacts.hs
contacts-api/src/Futurice/App/Contacts/: Config.hs  Logic.hs  Types.hs
dynmap-cache/: dynmap-cache.cabal  package.yaml
eldapo/: eldapo.cabal
eldapo/ref/: LDAP-V3.asn1
eldapo/src/: Eldapo.hs  Neleus.hs
eldapo/src/Neleus/: Decode.hs  Encode.hs  Parser.hs  Types.hs
email-proxy/: README.md  email-proxy.cabal  package.yaml
email-proxy-client/: email-proxy-client.cabal
email-proxy-client/src/Futurice/App/EmailProxy/: API.hs  Client.hs  Types.hs
email-proxy/src/Futurice/App/EmailProxy/: Logic.hs  Main.hs  Mock.hs
env-config/: env-config.cabal  package.yaml
env-config/src/Futurice/: EnvConfig.hs
flowdock-proxy/: flowdock-proxy.cabal  schema.sql
flowdock-proxy/src/Futurice/App/FlowdockProxy/: API.hs  Charts.hs  Clay.hs  Config.hs  Ctx.hs  DB.hs  IndexPage.hs  Main.hs  Markup.hs  UsersPage.hs
flowdock-proxy/srv/: Main.hs
fum-api/: fum-api.cabal
fum-api/src/Futurice/FUM/: MachineAPI.hs
fum-carbon-app/: fum-carbon-app.cabal
fum-carbon-app/src/Futurice/: Lomake.hs
fum-carbon-app/src/Futurice/App/: FUM.hs
fum-carbon-app/src/Futurice/App/FUM/: API.hs  Auth.hs  Clay.hs  Config.hs  Ctx.hs  Machine.hs  Markup.hs  Transactor.hs
fum-client/: fum-client.cabal  package.yaml
fum-client/src/FUM/: Types.hs
fum-types/: fum-types.cabal
fum-types/src/FUM/Types/: GroupName.hs  Login.hs
futuqu/: futuqu.cabal
futuqu/src/: Futuqu.hs
futuqu/src/Futuqu/: API.hs  NT.hs
futuqu/src/Futuqu/Ggrr/: HourKinds.hs  MissingHours.hs
futuqu/src/Futuqu/Rada/: Accounts.hs  Capacities.hs  People.hs  Projects.hs  Tasks.hs  Timereports.hs
futuqu/src/Futuqu/Servant/: CSV.hs
futuqu/src/Futuqu/Strm/: Capacities.hs  Timereports.hs
futurice-chart/: futurice-chart.cabal
futurice-chart/src/Futurice/Chart/: Enum.hs  Histogram.hs  Stacked.hs
futurice-constants/: constants.json  constants.sample.json  futurice-constants.cabal
futurice-constants/src/Futurice/: Constants.hs  Services.hs
futurice-constants/src/Futurice/Constants/: Internal.hs
futurice-croned/: LICENSE  build.sh  croned.js  futurice-croned.cabal
futurice-croned/example/: .gitignore  Dockerfile  README.md  script.py
futurice-croned/src/Futurice/App/: Croned.hs
futurice-croned/srv/: Main.hs
futurice-enum-generator/: LICENSE  README.md  futurice-enum-generator.cabal
futurice-enum-generator/cli/: Main.hs
futurice-enum-generator/fixtures/: TaskTag.lhs  TaskTag.output
futurice-enum-generator/src/Futurice/App/: EnumGenerator.hs
futurice-enum-generator/test/: Tests.hs
futurice-foundation/: futu.js  futurice-foundation.cabal  package.yaml
futurice-foundation/src/Futurice/: CommandResponse.hs  Lomake.hs
futurice-foundation/src/Futurice/JavaScript/: TH.hs
futurice-foundation/src/Futurice/Lucid/: Foundation.hs  Generics.hs  Navigation.hs  Select2.hs  Style.hs
futurice-github/: futurice-github.cabal  package.yaml
futurice-github/src/Futurice/: GitHub.hs
futurice-integrations/: futurice-integrations.cabal  package.yaml
futurice-integrations/gogol-test/: Test.hs
futurice-integrations/src/Futurice/: Daily.hs  Integrations.hs
futurice-integrations/src/Futurice/Integrations/: Classes.hs  Common.hs  GitHub.hs  Monad.hs  Serv.hs  TimereportKind.hs  Types.hs
futurice-integrations/src/Futurice/Integrations/Monad/: StateSet.hs
futurice-integrations/src/Futurice/Integrations/Serv/: Config.hs  Contains.hs  FromList.hs
futurice-lambda/: futurice-lambda.cabal
futurice-lambda/cbits/: cbits.c
futurice-lambda/src/Futurice/: Lambda.hs
futurice-logo/: futurice-logo.cabal  package.yaml
futurice-logo/src/Futurice/: Colour.hs  Logo.hs
futurice-metrics/: futurice-metrics.cabal
futurice-postgres/: futurice-postgres.cabal
futurice-postgres/src/Futurice/: Postgres.hs
futurice-postgres/src/Futurice/Postgres/: SqlBuilder.hs
futurice-pure-trans/: futurice-pure-trans.cabal
futurice-reports/: futurice-reports.cabal  package.yaml
futurice-reports/src/Futurice/Report/: Columns.hs
(+593 files in other folders)
