cabal-version: 2.2
name:          arcola
version:       0
synopsis:      A barebone network servers
description:
  Arcola is sublabel of warp. Let's you write simple, non-HTTP servers.
homepage:      https://github.com/futurice/haskell-mega-repo
license:       BSD-3-Clause
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2017 Futurice
category:      Network
build-type:    Simple

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Network.Arcola
  build-depends:
    , base
    , bytestring
    , network
    , streaming-commons

executable arcola-echo
  default-language: Haskell2010
  hs-source-dirs:   echo
  main-is:          Main.hs
  build-depends:
    , arcola
    , base
    , bytestring
