name:           avatar-app
version:        0
synopsis:       Avatar app
description:    Make an avatar of everything
category:       Web
homepage:       https://github.com/futurice/avatar-app#readme
bug-reports:    https://github.com/futurice/avatar-app/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.8.4, GHC==7.10.2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/avatar-app

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base                  >=4.7   && <4.11
    , aeson-compat
    , base-compat
    , blaze-html
    , bytestring
    , env-config
    , futurice-prelude
    , futurice-servant
    , http-client
    , http-client-tls
    , JuicyPixels >=3.2.7
    , JuicyPixels-scale-dct >=0.1.0.0
    , lens
    , servant
    , servant-JuicyPixels >=0.3.0.0
    , servant-server
    , stm
    , text
    , time
    , transformers
    , transformers-compat
    , unordered-containers
    , vector
  exposed-modules:
      Futurice.App.Avatar
      Futurice.App.Avatar.API
      Futurice.App.Avatar.Config
      Futurice.App.Avatar.Logic
  default-language: Haskell2010

executable avatar-server
  main-is: Main.hs
  hs-source-dirs:
      srv
  ghc-options: -Wall -threaded -rtsopts
  build-depends:
      base
    , avatar-app
  default-language: Haskell2010
