cabal-version:  2.2
name:           avatar-app
version:        0

synopsis:       Avatar app
description:    Make an avatar of everything
category:       Web
homepage:       https://github.com/futurice/avatar-app#readme
bug-reports:    https://github.com/futurice/avatar-app/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/avatar-app

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base                  >=4.7   && <4.12
    , aeson-compat
    , amazonka
    , amazonka-lambda
    , amazonka-s3
    , avatar-client
    , avatar-internal
    , base-compat
    , blaze-html
    , bytestring
    , conduit-extra
    , containers
    , env-config
    , file-embed
    , fum-client
    , fum-types
    , futurice-integrations
    , futurice-foundation
    , futurice-prelude
    , futurice-servant
    , http-client
    , http-client-tls
    , JuicyPixels
    , lens
    , servant
    , servant-JuicyPixels
    , servant-lucid
    , servant-server
    , stm
    , text
    , time
    , transformers
    , transformers-compat
    , unordered-containers
    , vector
  exposed-modules:
      Futurice.App.Avatar
      Futurice.App.Avatar.Config
      Futurice.App.Avatar.Ctx
      Futurice.App.Avatar.Embedded
  default-language: Haskell2010

executable avatar-server
  main-is: Main.hs
  hs-source-dirs:
      srv
  ghc-options: -Wall -threaded -rtsopts
  build-depends:
      base
    , avatar-app
  default-language: Haskell2010

library avatar-internal
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src-internal
  exposed-modules:
      Futurice.App.Avatar.Types
  build-depends:
    , base ^>=4.10 || ^>=4.11
    , base64-bytestring
    , binary
    , cryptohash-sha256
    , futurice-prelude

foreign-library avatar-process-lambda
  type:             native-shared
  ghc-options:      -Wall
  hs-source-dirs:   src-process
  default-language: Haskell2010
  other-modules:
    Futurice.Lambda.Avatar.Process

  build-depends:
    , base ^>=4.10 || ^>=4.11
    , amazonka
    , amazonka-s3
    , avatar-internal
    , bytestring
    , env-config
    , futurice-lambda
    , futurice-prelude
    , http-client
    , JuicyPixels >=3.2.7
    , JuicyPixels-scale-dct >=0.1.0.0
    , linear
    , vector

  build-depends:
    , aeson
