name:           avatar-client
version:        0
synopsis:       Avatar client
description:    Avatar client
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.10.3, GHC==8.0.2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  hs-source-dirs:
      src
  default-extensions:
    DerivingStrategies
    GeneralizedNewtypeDeriving
  ghc-options: -Wall
  build-depends:
      base                  >=4.7   && <4.11
    , aeson
    , bytestring
    , fum-types
    , futurice-prelude
    , JuicyPixels
    , servant
    , servant-JuicyPixels
    , swagger2
  exposed-modules:
      Futurice.App.Avatar.API
      Servant.Cached
  default-language: Haskell2010
