cabal-version:      2.2
name:               avatar-client
version:            0
synopsis:           Avatar client
description:        Avatar client
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    Futurice.App.Avatar.API
  default-extensions:
    DerivingStrategies
    GeneralizedNewtypeDeriving
  build-depends:
    , aeson
    , base
    , bytestring
    , fum-types
    , futurice-prelude
    , JuicyPixels
    , servant
    , servant-cached
    , servant-JuicyPixels
    , swagger2
