cabal-version:      2.2
name:               contacts-api
version:            0
synopsis:           Contacts api
description:        New and fancy
category:           Web
homepage:           https://github.com/futurice/contacts-api#readme
bug-reports:        https://github.com/futurice/contacts-api/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/contacts-api

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall -freduction-depth=30
  default-extensions:
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    ScopedTypeVariables
  build-depends:
      aeson
    , aeson-compat
    , avatar-client
    , base
    , base-compat
    , bifunctors
    , binary-orphans
    , binary-tagged
    , bytestring
    , cassava
    , containers
    , cryptohash
    , deepseq
    , directory
    , env-config
    , exceptions
    , file-embed
    , filepath
    , flowdock-rest
    , fum-types
    , futurice-constants
    , futurice-integrations
    , futurice-prelude
    , futurice-servant
    , futurice-tribes
    , github
    , hashable
    , haxl
    , haxl-fxtra
    , http-client
    , http-client-tls
    , http-types
    , JuicyPixels
    , lens
    , lucid
    , mtl
    , periocron
    , personio-client
    , planmill-client
    , power-client
    , rfc5051
    , servant
    , servant-cassava
    , servant-lucid
    , servant-server
    , SHA
    , stm
    , strict-base-types      >=0.4
    , swagger2
    , tagged
    , text
    , time
    , transformers
    , transformers-compat
    , unordered-containers
    , vector
    , wai
  exposed-modules:
    Futurice.App.Contacts
    Futurice.App.Contacts.API
    Futurice.App.Contacts.Config
    Futurice.App.Contacts.Logic
    Futurice.App.Contacts.Types

executable contacts-api-server
  default-language:   Haskell2010
  main-is:            Main.hs
  ghc-options:        -Wall -threaded -rtsopts -freduction-depth=30
  hs-source-dirs:     srv
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  build-depends:
      base
    , contacts-api
