cabal-version:      2.2
name:               dynmap-cache
version:            0
synopsis:           Dynamic STM based cache
description:        Dynamic STM based cache
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , async
    , base
    , base-compat
    , bytestring
    , deepseq
    , dependent-map
    , dependent-sum
    , exceptions
    , futurice-prelude
    , hashable
    , log-base
    , monad-control
    , monad-time
    , nf
    , stm
    , tagged
    , text
    , time
    , transformers
    , transformers-base
    , transformers-compat
    , unordered-containers
  exposed-modules:
    Futurice.Cache
    Futurice.DynMap

test-suite unit-tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  ghc-options:      -Wall -threaded -rtsopts
  build-depends:
    , async
    , base
    , dynmap-cache
    , futurice-prelude
    , stm
  build-depends:
    , tasty
    , tasty-hunit
  default-language: Haskell2010
