name:                eldapo
version:             0
synopsis:            An LDAP server
description:
  An LDAP server framework, where the logic is made by the user.
  .
  There is also an <https://github.com/slomo/eldapo Erlang project of the same name>,
  the status of both is the same: /Working yet: Nothing/.
homepage:            https://github.com/futurice/haskell-mega-repo
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Futurice
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library 
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Eldapo
    Neleus
    Neleus.Types
    Neleus.Decode
    Neleus.Encode
    Neleus.DER
    Neleus.Integer
    Neleus.Parser
  build-depends:
    base,
    arcola,
    semigroupoids,
    attoparsec,
    base16-bytestring,
    bytestring,
    recursion-schemes
executable eldapo
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:
    base,
    eldapo
