name:           email-proxy-client
version:        0
synopsis:       Email Proxy
description:    Make an email-proxy of everything
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.10.3, GHC==8.0.2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  hs-source-dirs:
      src
  default-extensions:
    DerivingStrategies
    GeneralizedNewtypeDeriving
  ghc-options: -Wall
  build-depends:
      base                  >=4.7   && <4.12
    , aeson
    , base-compat
    , bytestring
    , env-config
    , futurice-prelude
    , futurice-tribes
    , http-client
    , http-types
    , lens
    , servant-server
    , servant-client
    , text
    , time
  exposed-modules:
      Futurice.App.EmailProxy.API
      Futurice.App.EmailProxy.Client
      Futurice.App.EmailProxy.Types
  default-language: Haskell2010
