cabal-version:      2.2
name:               email-proxy-client
version:            0
synopsis:           Email Proxy
description:        Make an email-proxy of everything
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DerivingStrategies
    GeneralizedNewtypeDeriving
  build-depends:
    , aeson
    , base
    , base-compat
    , bytestring
    , env-config
    , futurice-prelude
    , futurice-tribes
    , http-client
    , http-types
    , lens
    , servant
    , servant-client
    , text
    , time
  exposed-modules:
    Futurice.App.EmailProxy.API
    Futurice.App.EmailProxy.Client
    Futurice.App.EmailProxy.Types
