cabal-version:      2.2
name:               email-proxy
version:            0
synopsis:           Email Proxy
description:        Make an email-proxy of everything
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , aeson
    , amazonka
    , amazonka-ses
    , base
    , base-compat
    , bytestring
    , email-proxy-client
    , env-config
    , futurice-prelude
    , futurice-servant
    , http-client
    , http-types
    , lens
    , servant-server
    , text
    , time
  exposed-modules:
    Futurice.App.EmailProxy.Config
    Futurice.App.EmailProxy.Ctx
    Futurice.App.EmailProxy.Logic
    Futurice.App.EmailProxy.Main
    Futurice.App.EmailProxy.Mock

executable email-proxy-server
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   srv
  ghc-options:      -Wall -threaded -rtsopts
  build-depends:
    , base
    , email-proxy

executable email-proxy-mock
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   mock
  ghc-options:      -Wall -threaded -rtsopts
  build-depends:
    , base
    , email-proxy
