cabal-version:      2.2
name:               env-config
version:            0
synopsis:           Parse environment variables
description:        ...
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    Futurice.EnvConfig
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  build-depends:
    , amazonka
    , base    
    , base16-bytestring
    , bytestring
    , containers
    , ed25519
    , flowdock-rest
    , futurice-prelude
    , github
    , http-client
    , lattices               >=1.5.0
    , monad-logger
    , postgresql-simple
    , postgresql-simple-url
    , semigroupoids
    , servant-client
    , split
    , text
    , uuid-types
