name:           flowdock-proxy
version:        0
synopsis:       Flowdock proxy and cache
description:    flowdock proxy and cache
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  hs-source-dirs:
      src
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
    DerivingStrategies
    DeriveAnyClass
  ghc-options: -Wall
  build-depends:
      aeson,
      async,
      base,
      Chart,
      clay,
      cmark-gfm,
      containers,
      deepseq,
      env-config,
      flowdock-rest,
      fum-types,
      futurice-foundation,
      futurice-integrations,
      futurice-postgres,
      futurice-prelude,
      futurice-servant,
      futurice-tribes,
      lens,
      periocron,
      personio-client,
      postgresql-simple,
      servant,
      servant-cached,
      servant-Chart,
      servant-server,
      stm,
      text,
      text-short,
      text-containers,
      these,
      time,
      vector,
      xss-sanitize

  if impl(ghc >= 8.4.4)
    build-depends:
      ghc-compact

  exposed-modules:
      Futurice.App.FlowdockProxy.API
      Futurice.App.FlowdockProxy.Charts
      Futurice.App.FlowdockProxy.Clay
      Futurice.App.FlowdockProxy.Config
      Futurice.App.FlowdockProxy.Ctx
      Futurice.App.FlowdockProxy.DB
      Futurice.App.FlowdockProxy.IndexPage
      Futurice.App.FlowdockProxy.Main
      Futurice.App.FlowdockProxy.Markup
      Futurice.App.FlowdockProxy.UsersPage

  default-language: Haskell2010

executable flowdock-proxy-server
  main-is: Main.hs
  hs-source-dirs:
      srv
  ghc-options: -Wall -Wall -threaded -rtsopts
  build-depends: base, flowdock-proxy
  default-language: Haskell2010
