cabal-version: 2.2
name:          flowdock-proxy
version:       0
synopsis:      Flowdock proxy and cache
description:   flowdock proxy and cache
category:      Web
homepage:      https://github.com/futurice/haskell-mega-repo#readme
bug-reports:   https://github.com/futurice/haskell-mega-repo/issues
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ScopedTypeVariables
  build-depends:
    , aeson
    , async
    , base
    , Chart
    , clay
    , cmark-gfm
    , containers
    , deepseq
    , env-config
    , flowdock-rest
    , fum-types
    , futurice-foundation
    , futurice-integrations
    , futurice-postgres
    , futurice-prelude
    , futurice-servant
    , futurice-tribes
    , ghc-compact
    , lens
    , mtl
    , periocron
    , personio-client
    , postgresql-simple
    , servant
    , servant-cached
    , servant-Chart
    , servant-server
    , stm
    , text
    , text-containers
    , text-short
    , these
    , time
    , vector
    , xss-sanitize
  exposed-modules:
    Futurice.App.FlowdockProxy.API
    Futurice.App.FlowdockProxy.Charts
    Futurice.App.FlowdockProxy.Clay
    Futurice.App.FlowdockProxy.Config
    Futurice.App.FlowdockProxy.Ctx
    Futurice.App.FlowdockProxy.DB
    Futurice.App.FlowdockProxy.IndexPage
    Futurice.App.FlowdockProxy.Main
    Futurice.App.FlowdockProxy.Markup
    Futurice.App.FlowdockProxy.UsersPage

executable flowdock-proxy-server
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   srv
  ghc-options:      -Wall -Wall -threaded -rtsopts
  build-depends:
    , base
    , flowdock-proxy
