name:           fum-api
version:        0
synopsis:       FUM API
description:    FUM-API
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  hs-source-dirs:
      src
  default-extensions: DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable ScopedTypeVariables
  ghc-options: -Wall
  build-depends:
      base >=4.8   && <4.11
    , aeson
    , aeson-compat
    , async
    , binary
    , binary-tagged
    , dependent-sum
    , fum-types
    , futurice-prelude
    , generics-sop
    , github
    , haxl
    , http-client
    , lens
    , postgresql-simple
    , servant
    , swagger2
    , text
  exposed-modules:
      Futurice.FUM.MachineAPI
  default-language: Haskell2010
