cabal-version:      2.2
name:               fum-api
version:            0
synopsis:           FUM API
description:        FUM-API
category:           Web
homepage:           https://github.com/futurice/haskell-mega-repo#readme
bug-reports:        https://github.com/futurice/haskell-mega-repo/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-mega-repo

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    Futurice.FUM.MachineAPI
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables
  build-depends:
    , aeson
    , aeson-compat
    , async
    , base            
    , binary
    , binary-tagged
    , dependent-sum
    , fum-types
    , futurice-prelude
    , futurice-signed
    , generics-sop
    , github
    , haxl
    , http-client
    , lens
    , postgresql-simple
    , servant
    , swagger2
    , text
